--- a/package.json
+++ b/package.json
@@ -11,23 +11,28 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^14.7.0",
+    "@react-native-firebase/app": "^14.11.0",
     "@react-native-firebase/firestore": "^14.7.0",
+    "@react-native-firebase/storage": "^14.11.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.2",
     "expo-constants": "~13.0.1",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-action-button": "^2.8.5",
     "react-native-datefield": "^0.3.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-image-picker": "^4.8.3",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^4.12.0",
     "react-native-reanimated": "~2.3.1",
