--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
     "expo-camera": "~12.1.2",
+    "expo-checkbox": "~2.0.0",
     "expo-constants": "~13.0.1",
     "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
@@ -30,9 +31,12 @@
     "react-native-action-button": "^2.8.5",
     "react-native-datefield": "^0.3.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-document-picker": "^8.1.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-picker": "^4.8.3",
+    "react-native-maps": "0.29.4",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^4.12.0",
     "react-native-reanimated": "~2.3.1",
